refactor: update to 1.19-pre2